# vcpkgtest

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: hosted-ninja-vcpkg_submod.yml
src/: main.cpp  test.cpp
